--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.30</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
