Add a configuration class to support WEB MVC Spring  annotation configuration

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,7 @@
+<!--XML based configuration-->
+<!--
 <web-app>
-    <!-- The front controller, the entry point for all requests -->
+    &lt;!&ndash; The front controller, the entry point for all requests &ndash;&gt;
     <servlet>
         <servlet-name>main-dispatcher</servlet-name>
         <servlet-class>
@@ -12,9 +14,33 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    <!-- Map all requests to the DispatcherServlet for handling -->
+    &lt;!&ndash; Map all requests to the DispatcherServlet for handling &ndash;&gt;
     <servlet-mapping>
         <servlet-name>main-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+</web-app>-->
+
+<!--Annotation based configuration-->
+<web-app>
+    <!-- The front controller, the entry point for all requests -->
+    <servlet>
+        <servlet-name>main-dispatcher</servlet-name>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>
+                [config.WebConfig]
+            </param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 </web-app>
