--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>
-                [config.WebConfig]
+                config.WebConfig
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
